src/objects/IRIS_Question__c.object
<CustomObject>
    <description>Stores all the Questions. (not specific to an Assessment)</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the question is active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <description>Represents the number associated with a question.
For example &quot;G-001&quot;</description>
        <label>Ref</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Stores the questions of a particular Category.</description>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question_Number__c</columns>
        <columns>Question__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>